[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/PlayerControl.gd" type="Script" id=1]
[ext_resource path="res://Sprites/IMG_0904.PNG" type="Texture" id=2]
[ext_resource path="res://Sprites/IMG_0894.PNG" type="Texture" id=3]
[ext_resource path="res://prefabs(?)/Knife.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs(?)/Pistol.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs(?)/AutoGun.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs(?)/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=8]
[ext_resource path="res://prefabs(?)/EnemyKnife.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs(?)/ChargingGun.tscn" type="PackedScene" id=10]
[ext_resource path="res://prefabs(?)/EnemyPistol.tscn" type="PackedScene" id=11]
[ext_resource path="res://prefabs(?)/EnemyAutoGun.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 10.4705

[sub_resource type="GDScript" id=2]
script/source = "extends Area2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 77.2301, 28.7375 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=5]
0/name = "IMG_0894.PNG 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 372.337, 308.581 )
scale = Vector2( 0.997019, 0.994701 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 5.99139, 10.662 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 10.7933, -8.35611 )
scale = Vector2( 4.36, 6 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )

[node name="WeaponFind" type="Area2D" parent="Player"]
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/WeaponFind"]
position = Vector2( 42.0896, -2.82684 )
shape = SubResource( 3 )

[node name="WeaponPlace" type="Sprite" parent="Player"]
position = Vector2( 111.467, -4.38562 )
rotation = 1.5708
offset = Vector2( -93.9429, 6.59301 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65541, 0, 0, 65551, 0, 0, 131072, 0, 0, 131077, 0, 0, 131087, 0, 0, 196608, 0, 0, 196613, 0, 0, 196623, 0, 0, 262144, 0, 0, 262149, 0, 0, 262159, 0, 0, 327680, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 458752, 0, 0, 458767, 0, 0, 458784, 0, 0, 524288, 0, 0, 524303, 0, 0, 524320, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589856, 0, 0, 655360, 0, 0, 655375, 0, 0, 655392, 0, 0, 720896, 0, 0, 720911, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 786432, 0, 0, 786447, 0, 0, 786464, 0, 0, 786475, 0, 0, 851968, 0, 0, 851983, 0, 0, 852000, 0, 0, 852011, 0, 0, 917504, 0, 0, 917519, 0, 0, 917547, 0, 0, 983040, 0, 0, 983083, 0, 0, 1048576, 0, 0, 1048619, 0, 0, 1114112, 0, 0, 1114144, 0, 0, 1114155, 0, 0, 1179648, 0, 0, 1179680, 0, 0, 1179691, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245216, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1310720, 0, 0, 1310735, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310768, 0, 0, 1376256, 0, 0, 1376271, 0, 0, 1376288, 0, 0, 1376296, 0, 0, 1376304, 0, 0, 1441792, 0, 0, 1441807, 0, 0, 1441824, 0, 0, 1441832, 0, 0, 1441840, 0, 0, 1507328, 0, 0, 1507343, 0, 0, 1507360, 0, 0, 1507368, 0, 0, 1507376, 0, 0, 1572864, 0, 0, 1572879, 0, 0, 1572896, 0, 0, 1572904, 0, 0, 1572912, 0, 0, 1638400, 0, 0, 1638415, 0, 0, 1638432, 0, 0, 1638440, 0, 0, 1638448, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703938, 0, 0, 1703939, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703942, 0, 0, 1703943, 0, 0, 1703944, 0, 0, 1703945, 0, 0, 1703946, 0, 0, 1703947, 0, 0, 1703948, 0, 0, 1703949, 0, 0, 1703950, 0, 0, 1703951, 0, 0, 1703952, 0, 0, 1703953, 0, 0, 1703954, 0, 0, 1703955, 0, 0, 1703956, 0, 0, 1703957, 0, 0, 1703962, 0, 0, 1703963, 0, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1703967, 0, 0, 1703968, 0, 0, 1703976, 0, 0, 1703984, 0, 0, 1769491, 0, 0, 1769500, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1835027, 0, 0, 1835036, 0, 0, 1900563, 0, 0, 1900572, 0, 0, 1966099, 0, 0, 1966108, 0, 0, 2031635, 0, 0, 2031644, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0 )

[node name="Knife" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_left = 2.35114
margin_top = 1.41068
margin_right = 2.35107
margin_bottom = 1.41064
script = ExtResource( 8 )

[node name="Enemy2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1572.73, 438.233 )

[node name="Enemy3" parent="." instance=ExtResource( 11 )]
position = Vector2( 215.156, 1374.39 )

[node name="Enemy4" parent="." instance=ExtResource( 9 )]
position = Vector2( 1767.02, 1388.78 )

[node name="Pistol" parent="." instance=ExtResource( 5 )]
position = Vector2( 272.721, 3178.1 )

[node name="Enemy5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1752.62, 3187.69 )

[node name="Enemy6" parent="." instance=ExtResource( 12 )]
position = Vector2( 2612.89, 3541.46 )

[node name="AutoGun2" parent="." instance=ExtResource( 6 )]
position = Vector2( 3506.14, 4046.85 )

[node name="ChargingGun" parent="." instance=ExtResource( 10 )]
position = Vector2( 5428.98, 1585.82 )

[node name="Enemy7" parent="." instance=ExtResource( 11 )]
position = Vector2( 5095.79, 1652.97 )
rotation = 1.5708
scale = Vector2( 1, 1.00297 )

[node name="Enemy8" parent="." instance=ExtResource( 12 )]
position = Vector2( 5351.17, 1851.29 )
rotation = 1.5708
scale = Vector2( 1, 1.00297 )

[node name="Enemy9" parent="." instance=ExtResource( 9 )]
position = Vector2( 2450.51, 1367.83 )
rotation = 1.5708
scale = Vector2( 1, 1.00297 )

[node name="Enemy10" parent="." instance=ExtResource( 9 )]
position = Vector2( 3569.05, 1104.93 )
rotation = 1.5708
scale = Vector2( 1, 1.00297 )

[node name="Enemy11" parent="." instance=ExtResource( 11 )]
position = Vector2( 2460.07, 2883.12 )
rotation = 1.5708
scale = Vector2( 1, 1.00297 )

[node name="Enemy12" parent="." instance=ExtResource( 12 )]
position = Vector2( 3712.45, 2758.84 )
rotation = 1.5708
scale = Vector2( 1, 1.00297 )

[node name="Enemy13" parent="." instance=ExtResource( 12 )]
position = Vector2( 3063.05, 2341.1 )

[node name="ChargingGun2" parent="." instance=ExtResource( 10 )]
position = Vector2( 502.215, 532.993 )
[connection signal="on_health_drop" from="Player" to="CanvasLayer/GUI" method="_on_Player_on_health_drop"]
